--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
 
     <!-- Basic Meta Tags -->
+    <meta name="google-site-verification" content="F2DJld0RrpHwdcala6kuLMXljD8QC-HifQRjitaLGL8" />
     <meta name="author" content="Carl Nino Gonzaga">
     <meta name="description" content="Personal experiences in the Philippines including Bohol, Camiguin, Boracay, Siargao, and Manila. A Grade 10 student from University of Cebu Lapu-Lapu and Mandaue.">
     <meta name="keywords" content="Carl Nino Gonzaga, Philippines Travel, Bohol, Camiguin, Boracay, Siargao, Manila, Student, University of Cebu">
@@ -67,3 +68,4 @@
 
 </body>
 </html>
+
